@@ -23,8 +23,7 @@
 			<i class="lms-ui-icon-clipboard"></i>
 		</a>
 		<span>{if (is_array($filter.ids) && count($filter.ids) != 1) || !isset($filter.ids)}{$ticket.name}{/if}</span>
-		<br>
-		{$ticket.createtime|date_format:"%Y/%m/%d %H:%M:%S"}
+		{if !ConfigHelper::checkConfig('rt.hide_ticket_row_create_time')}<br>{$ticket.createtime|date_format:"%Y/%m/%d %H:%M:%S"}{/if}
 	</TD>
 	<TD class="text-center">
 		<span>{$_SERVICETYPES[$ticket.service]}</span>
